# gsAgents2

./: .gitignore  AGENTS.md  CMakeLists.txt  DEPLOYMENT.md  README.md  init-deploy.sh  requirements.txt
.github/agents/: my-agent.md
.github/commands/: manifest.txt  my-command.md
.github/skills/: manifest.txt
.github/skills/my-skill/: SKILL.md  examples.md  manifest.txt  reference.md
.github/skills/my-skill/scripts/: script.py
.github/workflows/: cleanup-branches.yml  deploy.yml
agents/: code-reviewer.json  security-auditor.json
cmake/: CleanAgents.cmake  FetchAgents.cmake
compiler/: compile.py
compiler/schema/: agent.schema.json  skill.schema.json
compiler/templates/agents/: claude.md.j2  copilot.md.j2  opencode.md.j2
compiler/templates/skills/: skill.md.j2
skills/: docx-creation.json
